--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,7 @@
+<%= link_to 'New article', new_article_path %>
+
 <table>
+
   <tr>
     <th>
       Title
@@ -14,8 +17,5 @@
       <td> <%= article.text %> </td>
     </tr>
   <% end %>
-
-
-
 
 </table>
